--- a/example/MyVala.ipynb
+++ b/example/MyVala.ipynb
@@ -2,8 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "705ae21f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating executable file\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Hello World~~0.12/n"
+      ]
+     },
+     "metadata": {
+      "text/plain": {}
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// %kcmd:list\n",
+    "//%log:0\n",
+    "public class Main{ \n",
+    "\tpublic static int main (string[] args) { \n",
+    "\t\tprint(\"Hello World~~0.12/n\"); \n",
+    "\t\treturn 0; \n",
+    "\t}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "92f7c518-abac-43a5-a2b0-f3eae5885809",
+   "id": "43a72974",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,17 +47,14 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Wolfram Language 12.3",
-   "language": "Wolfram Language",
-   "name": "wolframlanguage12.3"
+   "display_name": "MyVala",
+   "language": "vala",
+   "name": "myvala"
   },
   "language_info": {
-   "codemirror_mode": "mathematica",
-   "file_extension": ".m",
-   "mimetype": "application/vnd.wolfram.m",
-   "name": "Wolfram Language",
-   "pygments_lexer": "mathematica",
-   "version": "12.0"
+   "file_extension": ".vala",
+   "mimetype": "text/vala",
+   "name": "text/vala"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
